--- a/frontend-study/react-app/package.json
+++ b/frontend-study/react-app/package.json
@@ -28,8 +28,12 @@
     "jest": "^29.6.0",
     "msw": "^1.2.2",
     "prettier": "^2.8.7",
+    "sass": "^1.63.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
-    "sass": "^1.63.6"
+    "axios": "^1.4.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
