--- a/frontend-study/react-app/package.json
+++ b/frontend-study/react-app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -22,16 +22,18 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "antd": "^5.4.6",
+    "axios": "^1.4.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "immer": "^10.0.2",
     "jest": "^29.6.0",
     "msw": "^1.2.2",
     "prettier": "^2.8.7",
+    "react-router-dom": "^6.11.1",
     "sass": "^1.63.6",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "axios": "^1.4.0"
+    "vite": "^4.3.9"
   },
   "msw": {
     "workerDirectory": "public"
