[Frontend] test: complete react page e2e test

--- a/frontend-study/react-app/package.json
+++ b/frontend-study/react-app/package.json
@@ -7,9 +7,11 @@
     "dev": "vite --mode development",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
+    "cypress": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7"
